--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,10 +1,12 @@
 * {
   font-size: 16px;
+
 }
 
 body {
-  margin-right: 15px;
-  margin-left: 15px;
+  padding:50px;
+  margin:50px;
+
 }
 
 .box-sm {
@@ -24,13 +26,25 @@ body {
 }
 
 #yellow {
-
+  background-color: yellow;
+  width:100%;
+  height:300px;
+  padding-top: 100px;
 }
 
 #red {
+  background-color:red;
+  border: 2px solid black;
+  width: 80%;
+  height:200px;
+  margin:auto;
 
 }
 
-#lightblue{
-
+#blue{
+  background-color: lightblue;
+  width: 70%;
+  height: 100px;
+  margin:auto;
+  margin-top: 50px;
 }
